--- a/detail.html
+++ b/detail.html
@@ -491,13 +491,13 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav ml-md-auto">
                     <li class="nav-item active">
-                        <a class="nav-link nav-home" href="#">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link nav-home" href="#home">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link nav-menus" href="#">Categories</a>
+                        <a class="nav-link nav-menus" href="index.html#categories">Categories</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link nav-menus" href="#">Products</a>
+                        <a class="nav-link nav-menus" href="#products">Products</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link nav-menus" href="#">Sign Up</a>
@@ -520,7 +520,7 @@
         </div>
 
         <!-- Start Page 1 -->
-        <div class="page page-1 w-100 d-flex justify-content-between">
+        <div id="home" class="page page-1 w-100 d-flex justify-content-between">
             <div class="images">
                 <img src="./assets/images/detail1.png" alt="">
             </div>
@@ -584,16 +584,16 @@
                             </option>
                         </select>
                     </div>
-                    <div class="continue">
+                    <a href="booking_satu.html" class="continue">
                         <p class="text-white p-2 text-center">Continue To Book</p>
-                    </div>
+                    </a>
                 </div>
             </div>
         </div>
         <!-- End Page 2 -->
 
         <!-- Start Page 3 -->
-        <div class="page page-3">
+        <div id="products" class="page page-3">
             <p class="title">
                 Popular Products
             </p>
