--- a/booking_dua.html
+++ b/booking_dua.html
@@ -258,7 +258,7 @@
     <div class="wrapper">
         <!-- Start Nav -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand brand mx-auto" href="#">CLOTHING STORE</a>
+            <a class="navbar-brand brand mx-auto" href="index.html">CLOTHING STORE</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -318,13 +318,13 @@
         </div>
 
         <div class="buttons d-flex flex-column p-5 align-items-center">
-            <div class="continue text-center text-white">
+            <a href="finish.html" class="continue text-center text-white">
                 Confirm Payment
-            </div>
+            </a>
 
-            <div class="cancel text-center text-white">
+            <a href="index.html" class="cancel text-center text-white">
                 Cancel
-            </div>
+            </a>
         </div>
 
         <div class="page page-5 d-flex justify-content-around align-items-center">
