--- a/finish.html
+++ b/finish.html
@@ -269,7 +269,7 @@
     <div class="wrapper">
         <!-- Start Nav -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand brand mx-auto" href="#">CLOTHING STORE</a>
+            <a class="navbar-brand brand mx-auto" href="index.html">CLOTHING STORE</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -293,9 +293,9 @@
                 once the transaction has been <br>
                 accepted
             </div>
-            <div class="continue text-center text-black font-weight-bold">
+            <a style="text-decoration: none;color: black;" href="index.html" class="continue text-center text-black font-weight-bold">
                 Back To Home
-            </div>
+            </a>
         </div>
 
         <div class="page page-5 d-flex justify-content-around align-items-center">
